--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,16 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 omegaconf = "^2.3.0"
+numpy = "^2.2.3"
+matplotlib = "^3.10.1"
+pandas = "^2.2.3"
+pytorch-lightning = "^2.5.0.post0"
+wandb = "^0.19.7"
+scikit-learn = "^1.6.1"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
