--- a/Multi_Class_Classification/config.yaml
+++ b/Multi_Class_Classification/config.yaml
@@ -1,13 +1,13 @@
 train_config:
   model_name: "ImagenetModels"
-  BATCH_SIZE: 64
+  BATCH_SIZE: 4
   weight_decay : 0.0001
   lr : 0.1
   ckpt_file_name : '{epoch} | {val_ce_loss:.3f} | {val_kappa:.3f} | {val_acc:.3f}'
   dir : "results/Classification"
   accumulate_grad_batches : 2
-  accelerator : gpu
-  MAX_EPOCHS : 100
+  accelerator : cpu
+  MAX_EPOCHS : 1
   num_workers: 8
   num_classes : 3
 
@@ -17,9 +17,11 @@ data_config:
   val_df_path : "data/dataset/val_df.csv"
   test_df_path : "data/dataset/test_df.csv"
   dataloader_params : 
+    num_workers : ${train_config.num_workers}
+    batch_size : ${train_config.BATCH_SIZE}
   batch_size : ${train_config.BATCH_SIZE}
   num_workers : ${train_config.num_workers}
-
+  
   
 callbacks_config:
   ModelCheckpoint:
@@ -27,11 +29,22 @@ callbacks_config:
     mode: 'min'
     save_top_k: 1
     save_last: True
+    verbose : True
   EarlyStopping:
     monitor: 'val_HuberLoss'
     mode: 'min'
     min_delta : 0.00005
     patience : 8
+    verbose : True
+
+lr_scheduler_params :
+  lr_scheduler_name: 'exponential_decay_lr_scheduler'
+  exponential_decay_lr_scheduler_params:
+    gamma: 0.99
+
+  cosine_annealing_lr_scheduler_params:
+    T_max: 250
+    eta_min: 1.0e-07
 
 ImagenetModels_params : 
   model_name : "resnet18"
