--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pandas = "^2.2.3"
 pytorch-lightning = "^2.5.0.post0"
 wandb = "^0.19.7"
 scikit-learn = "^1.6.1"
+rich = "^13.9.4"
 
 
 [tool.poetry.group.dev.dependencies]
