--- a/vae/config.yaml
+++ b/vae/config.yaml
@@ -1,7 +1,7 @@
 BetaVAE_params:
   in_channels: 1
-  latent_dim: 20
-  hidden_dims: [32, 64, 128, 256, 512]
+  latent_dim: 32
+  hidden_dims: [48, 64, 96, 128]
   beta:  4
   gamma : 1000
   max_capacity: 25
@@ -10,18 +10,18 @@ BetaVAE_params:
 
 VanillaVAE_params:
   in_channels: 1
-  latent_dim: 20
-  hidden_dims: [32, 64, 128, 256, 512]
+  latent_dim: 32
+  hidden_dims: [48, 64, 96, 128]
   
 train_config:
   model_name: "VanillaVAE"
   dataset_objective : "common_classification"
-  BATCH_SIZE: 4
-  weight_decay : 0.0001
-  lr : 0.1
+  BATCH_SIZE: 32
+  weight_decay : 1.0e-5
+  lr : 4.0e-4
   ckpt_file_name : '{epoch} | {val_VAE_loss:.3f}'
   dir : "results/VAE"
-  accumulate_grad_batches : 5
+  accumulate_grad_batches : 2
   accelerator : cpu
   MAX_EPOCHS : 1
   num_workers: 8
