--- a/foundation_models/config.yaml
+++ b/foundation_models/config.yaml
@@ -59,7 +59,7 @@ callbacks_config:
     save_last: True
     verbose : True
   EarlyStopping:
-    monitor: 'val_MAE_Loss'
+    monitor: 'val_MAE_loss'
     mode: 'min'
     min_delta : 0.00005
     patience : 8
