--- a/Multi_Class_Classification/sweep/sweep_config.yaml
+++ b/Multi_Class_Classification/sweep/sweep_config.yaml
@@ -1,23 +1,23 @@
 method : 'bayes'
-name : 'MulticlassClassification_sweep'
+name : 'Multiclass_Classification_sweep'
 metric :
   goal : 'minimize'
   name : 'val_ce_loss'
 
 parameters :
     BATCH_SIZE :
-      values : [32, 64, 128]
+      value : 64
     lr : 
       distribution : 'normal'
-      mu : 1e-4
-      sigma : 1e-2
+      mu : 4e-4
+      sigma : 1e-4
     weight_decay :
       distribution : 'normal'
-      mu : 1e-4
-      sigma : 1e-2
+      mu : 1e-5
+      sigma : 1e-4
     accumulate_grad_batches : 
-      values : [1,2,4,8]
+      values : [2, 4]
     ImagenetModels_submodel : 
-      values : ['resnet18', 'resnet34', 'resnet50', 'resnet101', 'resnet152']
+      value : 'resnet18'
     should_finetune_model :
-      values : [True, False]
+      value : True
