--- a/Multi_Class_Classification/sweep/sweep_full_config.yaml
+++ b/Multi_Class_Classification/sweep/sweep_full_config.yaml
@@ -1,24 +1,21 @@
 train_config:
   model_name: "ImagenetModels"
-  BATCH_SIZE: 4
-  weight_decay : 0.0001
-  lr : 0.1
+  BATCH_SIZE: 64
+  weight_decay : 0.000001
+  lr : 5.0e-4
   ckpt_file_name : '{epoch} | {val_ce_loss:.3f} | {val_kappa:.3f} | {val_acc:.3f}'
   dir : "results/Classification"
-  accumulate_grad_batches : 2
-  accelerator : cpu
-  MAX_EPOCHS : 1
+  accumulate_grad_batches : 4
+  accelerator : gpu
+  MAX_EPOCHS : 200
   num_workers: 8
   num_classes : 3
 
 data_config:
   dataset_type: "imagenet_3channel"
-  train_df_path : "data/dataset/train_df.csv"
-  val_df_path : "data/dataset/val_df.csv"
-  test_df_path : "data/dataset/test_df.csv"
-  dataloader_params : 
-    num_workers : ${train_config.num_workers}
-    batch_size : ${train_config.BATCH_SIZE}
+  train_path : "data/dataframes/common_classification_dataset/train_df.csv"
+  val_path : "data/dataframes/common_classification_dataset/val_df.csv"
+  test_path : "data/dataframes/common_classification_dataset/test_df.csv"
   batch_size : ${train_config.BATCH_SIZE}
   num_workers : ${train_config.num_workers}
   
@@ -31,10 +28,10 @@ callbacks_config:
     save_last: True
     verbose : True
   EarlyStopping:
-    monitor: 'val_HuberLoss'
+    monitor: 'val_ce_loss'
     mode: 'min'
-    min_delta : 0.00005
-    patience : 8
+    min_delta : 0.00002
+    patience : 5
     verbose : True
 
 lr_scheduler_params :
