--- a/diffusion/sweep/sweep_full_config.yaml
+++ b/diffusion/sweep/sweep_full_config.yaml
@@ -1,26 +1,26 @@
 sweep_config:
-  BATCH_SIZE : 2
+  BATCH_SIZE : 8
   weight_decay : 0.0001
-  lr : 0.1
+  lr : 2e-4
   scheduler_name : 'cosine_decay_lr_scheduler'
 
   # gaussian diffusion specific parameters
   timesteps : 100
   objective : 'pred_v'
   beta_schedule : 'sigmoid'
-  min_snr_gamma : 5
+  min_snr_gamma : 3
 
   # Unet specific parameters
-  dim : 64
-  init_dim : null
-  out_dim : 32
-  dim_mults : [1, 2, 4, 8]
+  dim : 128
+  init_dim : 32
+  out_dim : 1
+  dim_mults : [1, 2, 3,4]
   learned_variance : False
   learned_sinusoidal_cond : False
   random_fourier_features : False
-  learned_sinusoidal_dim : 16
+  learned_sinusoidal_dim : 32
   sinusoidal_pos_emb_theta : 10000
-  dropout : 0.
+  dropout : 0.15
   attn_dim_head : 32
   attn_heads : 4
   flash_attn : False
@@ -33,12 +33,13 @@ train_config:
   lr : ${sweep_config.lr}
   ckpt_file_name : '{epoch} | {val_MSE_loss:.3f}'
   dir : "results/Diffusion"
-  accumulate_grad_batches : 5
-  accelerator : cpu
-  MAX_EPOCHS : 1
+  accumulate_grad_batches : 8
+  accelerator : gpu
+  MAX_EPOCHS : 100
   num_workers: 8
   should_log_images : !!bool False
   log_images_every_n_epochs : 5
+  loss_lambda : 10
 
 data_config:
   train_path: 'data/dataframes/diffusion_dataset/train_df.csv'
@@ -67,13 +68,13 @@ noise_scheduler_params:
     clamp_min : 1e-5
 
 GaussianDiffusion_params:
-  image_size: 150
+  image_size: 152
   timesteps: ${sweep_config.timesteps}
   sampling_timesteps: null
   objective: ${sweep_config.objective}
   beta_schedule : ${sweep_config.beta_schedule}
   schedule_fn_kwargs : ${noise_scheduler_params.${sweep_config.beta_schedule}}
-  ddim_sampling_eta : 0.0
+  ddim_sampling_eta : 0.4
   auto_normalize : True
   offset_noise_strength : 0.  
   min_snr_loss_weight : False
@@ -85,7 +86,7 @@ UNet_params:
   init_dim : ${sweep_config.init_dim}
   out_dim : ${sweep_config.out_dim}
   dim_mults : ${sweep_config.dim_mults}
-  channels : 3
+  channels : 1
   self_condition : False
   learned_variance : ${sweep_config.learned_variance}
   learned_sinusoidal_cond : ${sweep_config.learned_sinusoidal_cond}
@@ -106,8 +107,8 @@ callbacks_config:
     save_last: True
     verbose : True
   EarlyStopping:
-    monitor: 'val_MSE_Loss'
+    monitor: 'val_MSE_loss'
     mode: 'min'
     min_delta : 0.00005
-    patience : 8
+    patience : 5
     verbose : True
