--- a/diffusion/sweep/sweep_config.yaml
+++ b/diffusion/sweep/sweep_config.yaml
@@ -26,7 +26,7 @@ parameters :
   objective : 
     value : 'pred_v'
   beta_schedule : 
-    value : ['sigmoid', 'cosine']
+    values : ['sigmoid', 'cosine']
   min_snr_gamma : 
     values : [3,5]
 
