--- a/Multi_Class_Classification/sweep/sweep_config.yaml
+++ b/Multi_Class_Classification/sweep/sweep_config.yaml
@@ -6,15 +6,19 @@ metric :
 
 parameters :
     BATCH_SIZE :
-      value : 64
-    lr : 
-      distribution : 'normal'
-      mu : 4e-4
-      sigma : 1e-4
+      value : 128
+    lr :
+      min : 1e-5
+      max : 5e-5 
+      #distribution : 'normal'
+      #mu : 2e-5
+     # sigma : 3e-4
     weight_decay :
-      distribution : 'normal'
-      mu : 1e-5
-      sigma : 1e-4
+      min : 1e-5
+      max : 7e-5
+#      distribution : 'normal'
+#      mu : 1e-5
+#      sigma : 1e-4
     accumulate_grad_batches : 
       values : [2, 4]
     ImagenetModels_submodel : 
