--- a/foundation_models/sweep/sweep_full_config.yaml
+++ b/foundation_models/sweep/sweep_full_config.yaml
@@ -1,87 +1,76 @@
-sweep_config:
-  BATCH_SIZE: 64
-  weight_decay : 0.0001
-  lr : 3.0e-4
-  scheduler_name: 'cosine_decay_lr_scheduler'
-
-  patch_size: 4
-  num_classes: 3 
-  dim: 96
-  depth: 3
-  heads: 4
-  mlp_dim_ratio: 1.2
-  pool: 'cls' 
-  channels: 1
-  dim_head: 64
-  dropout: 0.15
-
-  decoder_dim : 96
-  masking_ratio: 0.75
-  decoder_depth: 1
-  decoder_heads: 4
-  decoder_dim_head: 64
-
+MAE_params:
+  decoder_depth: ${sweep_config.decoder_depth}
+  decoder_dim: ${sweep_config.decoder_dim}
+  decoder_dim_head: ${sweep_config.decoder_dim_head}
+  decoder_heads: ${sweep_config.decoder_heads}
+  masking_ratio: ${sweep_config.masking_ratio}
 ViT_params:
-  image_size: 64
-  patch_size: ${sweep_config.patch_size}
-  num_classes: ${sweep_config.num_classes}
-  dim: ${sweep_config.dim}
-  depth: ${sweep_config.depth}
-  heads: ${sweep_config.heads}
-  mlp_dim_ratio: ${sweep_config.mlp_dim_ratio}
-  pool: ${sweep_config.pool}
   channels: ${sweep_config.channels}
+  depth: ${sweep_config.depth}
+  dim: ${sweep_config.dim}
   dim_head: ${sweep_config.dim_head}
   dropout: ${sweep_config.dropout}
-
-MAE_params:
-  decoder_dim : ${sweep_config.decoder_dim}
-  masking_ratio: ${sweep_config.masking_ratio}
-  decoder_depth: ${sweep_config.decoder_depth}
-  decoder_heads: ${sweep_config.decoder_heads}
-  decoder_dim_head: ${sweep_config.decoder_dim_head}
-
-
-train_config:
-  model_name: "MAE_ViT"
-  dataset_objective : "pretraining"
-  BATCH_SIZE: ${sweep_config.BATCH_SIZE}
-  weight_decay : ${sweep_config.weight_decay}
-  lr : ${sweep_config.lr}
-  ckpt_file_name : '{epoch} | {val_MAE_loss:.3f}'
-  dir : "results/MAE"
-  accumulate_grad_batches : 4
-  accelerator : gpu
-  MAX_EPOCHS : 200
-  num_workers: 8
-
+  heads: ${sweep_config.heads}
+  image_size: 64
+  mlp_dim_ratio: ${sweep_config.mlp_dim_ratio}
+  num_classes: ${sweep_config.num_classes}
+  patch_size: ${sweep_config.patch_size}
+  pool: ${sweep_config.pool}
+callbacks_config:
+  EarlyStopping:
+    min_delta: 5.0e-05
+    mode: min
+    monitor: val_MAE_loss
+    patience: 5
+    verbose: true
+  ModelCheckpoint:
+    mode: min
+    monitor: val_MAE_loss
+    save_last: true
+    save_top_k: 1
+    verbose: true
 data_config:
-  tr_path: "data/dataframes/foundation_models_pretraining_dataset/train_df.csv"
-  val_path : "data/dataframes/foundation_models_pretraining_dataset/val_df.csv"
-  tst_path : "data/dataframes/foundation_models_pretraining_dataset/test_df.csv"
-  batch_size : ${train_config.BATCH_SIZE}
-  num_workers : ${train_config.num_workers}
-
+  batch_size: ${train_config.BATCH_SIZE}
+  num_workers: ${train_config.num_workers}
+  tr_path: data/dataframes/foundation_models_pretraining_dataset/train_df.csv
+  tst_path: data/dataframes/foundation_models_pretraining_dataset/test_df.csv
+  val_path: data/dataframes/foundation_models_pretraining_dataset/val_df.csv
 scheduler_params:
-  scheduler_name: ${sweep_config.scheduler_name}
-
   cosine_decay_lr_scheduler_params:
     T_max: 250
     eta_min: 1.0e-07
-
   exponential_decay_lr_scheduler_params:
     gamma: 0.99
-
-callbacks_config:
-  ModelCheckpoint:
-    monitor: 'val_MAE_loss'
-    mode: 'min'
-    save_top_k: 1
-    save_last: True
-    verbose : True
-  EarlyStopping:
-    monitor: 'val_MAE_loss'
-    mode: 'min'
-    min_delta : 0.00005
-    patience : 5
-    verbose : True
+  scheduler_name: ${sweep_config.scheduler_name}
+sweep_config:
+  BATCH_SIZE: 64
+  channels: 1
+  decoder_depth: 2
+  decoder_dim: 96
+  decoder_dim_head: 64
+  decoder_heads: 4
+  depth: 4
+  dim: 64
+  dim_head: 96
+  dropout: 0.1
+  heads: 4
+  lr: 0.0003
+  masking_ratio: 0.5
+  mlp_dim_ratio: 2
+  num_classes: 3
+  patch_size: 4
+  pool: cls
+  scheduler_name: cosine_decay_lr_scheduler
+  weight_decay: 2.0e-05
+train_config:
+  BATCH_SIZE: ${sweep_config.BATCH_SIZE}
+  MAX_EPOCHS: 200
+  accelerator: gpu
+  accumulate_grad_batches: 4
+  ckpt_file_name: '{epoch} | {val_MAE_loss:.3f}'
+  dataset_objective: pretraining
+  dir: results/MAE
+  lr: ${sweep_config.lr}
+  model_name: MAE_ViT
+  num_workers: 8
+  weight_decay: ${sweep_config.weight_decay}
