--- a/Multi_Class_Classification/config.yaml
+++ b/Multi_Class_Classification/config.yaml
@@ -2,12 +2,12 @@ train_config:
   model_name: "ImagenetModels"
   BATCH_SIZE: 64
   weight_decay : 0.000001
-  lr : 5.0e-5
+  lr : 2.0e-4
   ckpt_file_name : '{epoch} | {val_ce_loss:.3f} | {val_kappa:.3f} | {val_acc:.3f}'
   dir : "results/Classification"
   accumulate_grad_batches : 4
   accelerator : gpu
-  MAX_EPOCHS : 100
+  MAX_EPOCHS : 150
   num_workers: 8
   num_classes : 3
 
@@ -45,5 +45,6 @@ lr_scheduler_params :
 
 ImagenetModels_params : 
   model_name : "resnet18"
-  should_finetune : False
+  should_finetune : True
   num_classes : ${train_config.num_classes}
+  lr : ${train_config.lr}
