--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ rich = "^13.9.4"
 pytorch-fid = "^0.3.0"
 einops = "^0.8.1"
 ema-pytorch = "^0.7.7"
+torchview = "^0.2.6"
+graphviz = "^0.20.3"
 
 
 [tool.poetry.group.dev.dependencies]
