--- a/foundation_models/configs/classification_finetuning_config.yaml
+++ b/foundation_models/configs/classification_finetuning_config.yaml
@@ -24,7 +24,7 @@ train_config:
   accelerator : 'gpu'
   MAX_EPOCHS : 200
   num_workers: 8
-  pretrained_mae_ckpt_path: 'results/MAE/MAE_ViT_pretraining /ckpts/epoch=63 | val_MSE_loss=0.064.ckpt'
+  pretrained_mae_ckpt_path: 'results/MAE/MAE_ViT_pretraining/ckpts/epoch=63 | val_MSE_loss=0.064.ckpt'
   find_unused_parameters : False
 
 data_config:
