--- a/foundation_models/configs/classification_finetuning_config.yaml
+++ b/foundation_models/configs/classification_finetuning_config.yaml
@@ -6,7 +6,7 @@ ViT_params:
   depth: 6
   heads: 6
   mlp_dim_ratio: 4
-  pool: 'cls' 
+  pool: 'mean' 
   channels: 1
   dim_head: 128
   dropout: 0.1
@@ -17,7 +17,7 @@ train_config:
   dataset_objective : "finetuned_classification"
   BATCH_SIZE: 64
   weight_decay : 5.0e-7
-  lr : 2.0e-4
+  lr : 7.0e-5
   ckpt_file_name : '{epoch} | {val_ce_loss:.3f}'
   dir : "results/MAE"
   accumulate_grad_batches : 3
